--- a/download.html
+++ b/download.html
@@ -11,7 +11,7 @@
   <!-- CSRF Token -->
   <meta name="csrf-token" content="{{ csrf_token() }}">
 
-  <title>Strona główna - Cortex for Web</title>
+  <title>Pobierz - Cortex for Web</title>
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -19,15 +19,45 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
-  <div class="container">
-    <div class="row row-logo">
-      <img src="img/logo-text-img.png" class="img-responsive logo-part" alt="Logo" />
+  <!-- //// NAVBAR //// -->
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+
+      <!-- Collapsed Hamburger -->
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#app-navbar-collapse">
+          <span class="sr-only">Toggle Navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+      <!-- Branding Image -->
+        <a class="navbar-brand" href="index.html">Cortex for Web</a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="app-navbar-collapse">
+        <!-- Left Side Of Navbar -->
+          <ul class="nav navbar-nav">&nbsp;</ul>
+
+        <!-- Right Side Of Navbar -->
+          <ul class="nav navbar-nav navbar-right">
+            <!-- Authentication Links -->
+              <li><a href="register.html">Zarejestruj się</a></li>
+              <li><a href="login.html">Zaloguj się</a></li>
+          </ul>
+      </div>
     </div>
-    <div class="row row-buttons"><div class="col-md-4 col-md-offset-4"><a href="register.html" class="btn btn-default btn-lg btn-begins">Zarejestruj się</a></div></div>
-    <div class="row row-buttons"><div class="col-md-4 col-md-offset-4"><a href="login.html" class="btn btn-default btn-lg btn-begins">Zaloguj się</a></div></div>
-    <div class="row row-buttons"><div class="col-md-4 col-md-offset-4"><a href="download.html" class="btn btn-default btn-lg btn-begins">Pobierz</a></div></div>
-    <div class="row row-buttons"><div class="col-md-4 col-md-offset-4"><a href="about.html" class="btn btn-default btn-lg btn-begins">O aplikacji</a></div></div>
-    <div class="row row-buttons"><div class="col-md-4 col-md-offset-4"><a href="donate.html" class="btn btn-default btn-lg btn-begins" target="_blank">Donate</a></div></div>
+  </nav>
+  <!-- //// NAVBAR //// -->
+
+  <div class="container">
+    <div class="row">
+      <ol class="breadcrumb">
+        <li><a href="index.html">Strona główna</a></li>
+        <li class="active">Pobierz</li>
+      </ol>
+    </div>
   </div>
 
   <footer>
