--- a/license.html
+++ b/license.html
@@ -126,7 +126,7 @@
 
   <footer>
     <div class="container main-copyright">
-      <div class="row">Wersja aplikacji - 0.2.0</div>
+      <div class="row">Wersja aplikacji - {{APP_VERSION}}</div>
       <div class="row">Wszelkie prawa zastrzeżone &copy; 2017 - 2018 Imparakeet</div>
       <div class="row"><a href="license.html">Licencja, Warunki i Polityka Prywatności</a></div>
     </div>
@@ -141,6 +141,7 @@
   <!-- <script src="https://vuejs.org/js/vue.min.js></script> -->
 
   <!-- Optional scripts -->
-  <!-- @yield('optional-scripts') -->
+  <!-- //// TYLKO DLA TESTÓW HTML //// -->
+  <script src="js/html.js"></script>
 </body>
 </html>
